@@ -345,8 +345,10 @@ BUG FIXES
   o  'chmatch' dint handle character encodings properly when the string was identical but the encoding were different. 
       For ex: UTF8 and Latin1. This is now fixed (a part of bug #5159). Thanks to Stefan Fritsch for reporting.
 
-  o  Joins on character columns with encodings other than ASCII now work as expected. This fixes bugs #5266 and other 
-     part of #5159. Thanks to Stefan Fritsch once again for reporting.
+  o  Joins (X[Y]) on character columns with different encodings now issue a warning that join may result in unexpected 
+     results for those indices with different encodings. That is, when "a" in X's key column and "a" in Y's key column  
+     are of different encodings, a warning is issued. This takes care of bugs #5266 and other part of #5159 for the 
+     moment. Thanks to Stefan Fritsch once again for reporting.
   
 NOTES
 
